@@ -33,6 +33,7 @@ WinMerge 2.9.1.6
   BugFix: Editing line filters updated wrong filter (#2025130)
   BugFix: Could change syntax highlight mode when highlighting was
     disabled from options (#2027325)
+  BugFix: Boldfacing did work only for Courier font (#2000996)
   Translation updates:
   - Chinese Traditional (#2039929)
 
